src/app/shared/form/components/select/select-option/select-option.component.scss
@import 'src/style/common';

.SelectOption {
  cursor: pointer;
  user-select: none;
  height: 56px;
  &__label {
    font-size: $font-size-m;
  }

  &__sublabel {
    font-size: $font-size-s;
    &--with-icon {
      margin-left: 40px;
    }
  }

  &--active {
    color: $walla-main;
  }

  &__icon--active {
    ::ng-deep g g,
    ::ng-deep path {
      fill: $walla-main;
    }
  }
}

